[gd_scene load_steps=39 format=3 uid="uid://ccvsw508kh4ot"]

[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="1_0xkip"]
[ext_resource type="PackedScene" uid="uid://da03scrbiqax2" path="res://src/peer_id/peer_id.tscn" id="1_fx0g1"]
[ext_resource type="Script" path="res://src/hunter/hunter.gd" id="1_g8mq7"]
[ext_resource type="PackedScene" uid="uid://cjnncoyhqt6xi" path="res://src/client_node_deleter/client_node_deleter.tscn" id="1_uvtrm"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="2_yqkoe"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="3_ocdoo"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="4_x2w3t"]
[ext_resource type="PackedScene" uid="uid://dc3f3sy1vso5f" path="res://src/group_bool/group_bool.tscn" id="9_n4b8t"]
[ext_resource type="PackedScene" uid="uid://ct3lglsww1564" path="res://src/move/move.tscn" id="9_rpftm"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="12_y0078"]
[ext_resource type="PackedScene" uid="uid://bkuic22finfse" path="res://src/controller/player_controller_stack.tscn" id="13_rf2iy"]
[ext_resource type="PackedScene" uid="uid://cy4qrm44icmyy" path="res://src/flashlight/flashlight.tscn" id="15_hljm8"]
[ext_resource type="PackedScene" uid="uid://mt548ar3ll4w" path="res://src/heartbeat_rumble/heartbeat_rumble.tscn" id="18_jndug"]
[ext_resource type="PackedScene" uid="uid://doo22pvhedm4n" path="res://src/collision_avoider/collision_avoider.tscn" id="18_rtxip"]
[ext_resource type="PackedScene" uid="uid://ctn825io87i34" path="res://src/hunter/costume/hunter_costume.tscn" id="19_c0d8f"]
[ext_resource type="Texture2D" uid="uid://cve418b7kooru" path="res://assets/flashlight/body_back.png" id="20_g6qtr"]
[ext_resource type="Texture2D" uid="uid://cbev4n3hmsa8" path="res://assets/flashlight/body_front.png" id="21_pbkwq"]
[ext_resource type="Shader" path="res://src/hunter/costume/palette_swap.gdshader" id="21_v1tqt"]
[ext_resource type="Texture2D" uid="uid://b1r4xdhw8pco3" path="res://assets/hunter/palettes/yellow.png" id="22_vv7rm"]
[ext_resource type="PackedScene" uid="uid://b4i2arqquha56" path="res://src/revivable/revivable.tscn" id="23_d234k"]
[ext_resource type="PackedScene" uid="uid://d15idq0ucnvek" path="res://src/floored_texture_progress_bar/floored_texture_progress_bar.tscn" id="24_qych1"]
[ext_resource type="PackedScene" uid="uid://d03ye80rpxrep" path="res://src/damage_signals/damage_signals.tscn" id="27_qehgg"]
[ext_resource type="PackedScene" uid="uid://djs1c1w30m8gp" path="res://src/alert/alert.tscn" id="28_bjj70"]
[ext_resource type="PackedScene" uid="uid://y03qjvt68tjj" path="res://src/aura_sense/aura_sense.tscn" id="28_dd2t8"]
[ext_resource type="PackedScene" uid="uid://gh0mk0t85f13" path="res://src/battery_alert/battery_alert.tscn" id="31_vp1ot"]
[ext_resource type="Texture2D" uid="uid://bg6wg2xddcnr5" path="res://assets/heart.png" id="33_a7fw2"]
[ext_resource type="PackedScene" uid="uid://dsccl51pqvbue" path="res://src/peer_process_mode/peer_process_mode.tscn" id="43_rsnb5"]
[ext_resource type="PackedScene" uid="uid://yi6ydbok31ql" path="res://src/peer_visibility_filter/peer_visibility_filter.tscn" id="44_mvfu7"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hflh2"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:z_index")
properties/1/spawn = true
properties/1/replication_mode = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_vawb0"]
radius = 8.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2bhal"]
properties/0/path = NodePath(".:limit_left")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:limit_top")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:limit_right")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:limit_bottom")
properties/3/spawn = true
properties/3/replication_mode = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_duydy"]
radius = 8.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bscnp"]
radius = 12.0

[sub_resource type="ViewportTexture" id="ViewportTexture_shnpn"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p6wcf"]
resource_local_to_scene = true
shader = ExtResource("21_v1tqt")
shader_parameter/old_palette = ExtResource("22_vv7rm")
shader_parameter/new_palette = ExtResource("22_vv7rm")

[sub_resource type="Gradient" id="Gradient_tkh6d"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xocc6"]
gradient = SubResource("Gradient_tkh6d")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_isui6"]
properties/0/path = NodePath(".:text")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="Hunter" type="CharacterBody2D" groups=["hunters", "players"]]
collision_layer = 4
collision_mask = 5
motion_mode = 1
wall_min_slide_angle = 0.0174533
script = ExtResource("1_g8mq7")
state_alive_layer = 20
state_invulnerable_layer = 4

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hflh2")

[node name="ClientNodeDeleter" parent="." node_paths=PackedStringArray("nodes") instance=ExtResource("1_uvtrm")]
nodes = [NodePath("../StateChart"), NodePath("../CollisionShape2D"), NodePath("../AuraSense"), NodePath("../DamageSignals"), NodePath("../CollisionAvoider"), NodePath("../Flashlight/Behavior")]

[node name="GhostPeerID" parent="." groups=["ghost_peer_ids"] instance=ExtResource("1_fx0g1")]

[node name="PeerProcessMode" parent="GhostPeerID" instance=ExtResource("43_rsnb5")]
secondary_include = true

[node name="PeerVisibilityFilter" parent="GhostPeerID" instance=ExtResource("44_mvfu7")]
secondary_allow_in_filter = true

[node name="PeerID" parent="." instance=ExtResource("1_fx0g1")]
unique_name_in_owner = true

[node name="PeerVisibilityFilter" parent="PeerID" instance=ExtResource("44_mvfu7")]

[node name="HeartbeatRumble" parent="." instance=ExtResource("18_jndug")]

[node name="StateChart" type="Node" parent="."]
script = ExtResource("1_0xkip")

[node name="Base" type="Node" parent="StateChart"]
script = ExtResource("2_yqkoe")
initial_state = NodePath("Alive")

[node name="Dead" type="Node" parent="StateChart/Base"]
script = ExtResource("3_ocdoo")

[node name="Revived" type="Node" parent="StateChart/Base/Dead"]
script = ExtResource("4_x2w3t")
to = NodePath("../../Alive")
event = &"revived"

[node name="IsDead" parent="StateChart/Base/Dead" groups=["hunter_is_deads"] instance=ExtResource("9_n4b8t")]
group = &"levels"

[node name="Alive" type="Node" parent="StateChart/Base"]
script = ExtResource("12_y0078")

[node name="Movement" type="Node" parent="StateChart/Base/Alive"]
script = ExtResource("2_yqkoe")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Base/Alive/Movement"]
script = ExtResource("3_ocdoo")

[node name="MoveStarted" type="Node" parent="StateChart/Base/Alive/Movement/Idle"]
script = ExtResource("4_x2w3t")
to = NodePath("../../Move")
event = &"move_started"

[node name="Move" type="Node" parent="StateChart/Base/Alive/Movement"]
script = ExtResource("3_ocdoo")

[node name="MoveStopped" type="Node" parent="StateChart/Base/Alive/Movement/Move"]
script = ExtResource("4_x2w3t")
to = NodePath("../../Idle")
event = &"move_stopped"

[node name="Move" parent="StateChart/Base/Alive/Movement/Move" node_paths=PackedStringArray("character") instance=ExtResource("9_rpftm")]
character = NodePath("../../../../../..")
move_speed = 74.0
manual_process = true

[node name="Stun" type="Node" parent="StateChart/Base/Alive/Movement"]
script = ExtResource("3_ocdoo")

[node name="StunEnded" type="Node" parent="StateChart/Base/Alive/Movement/Stun"]
script = ExtResource("4_x2w3t")
to = NodePath("../../Idle")
event = &"stun_ended"

[node name="StunTimeout" type="Timer" parent="StateChart/Base/Alive/Movement/Stun"]
wait_time = 1.5
one_shot = true

[node name="Vulnerability" type="Node" parent="StateChart/Base/Alive"]
script = ExtResource("2_yqkoe")
initial_state = NodePath("Vulnerable")

[node name="Invulnerable" type="Node" parent="StateChart/Base/Alive/Vulnerability"]
script = ExtResource("3_ocdoo")

[node name="TimedOut" type="Node" parent="StateChart/Base/Alive/Vulnerability/Invulnerable"]
script = ExtResource("4_x2w3t")
to = NodePath("../../Vulnerable")
delay_seconds = 4.0

[node name="Vulnerable" type="Node" parent="StateChart/Base/Alive/Vulnerability"]
script = ExtResource("3_ocdoo")

[node name="Died" type="Node" parent="StateChart/Base/Alive/Vulnerability/Vulnerable"]
script = ExtResource("4_x2w3t")
to = NodePath("../../../../Dead")
event = &"died"

[node name="Stunned" type="Node" parent="StateChart/Base/Alive/Vulnerability/Vulnerable"]
script = ExtResource("4_x2w3t")
to = NodePath("../../../Movement/Stun")
event = &"stunned"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.99, 0.99)
shape = SubResource("CircleShape2D_vawb0")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
process_mode = 3
enabled = false
limit_left = 0
limit_top = 0
limit_right = 6400
limit_bottom = 6400

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Camera2D"]
replication_config = SubResource("SceneReplicationConfig_2bhal")

[node name="PlayerControllerStack" parent="." instance=ExtResource("13_rf2iy")]

[node name="AuraSense" parent="." instance=ExtResource("28_dd2t8")]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AuraSense"]
shape = SubResource("CircleShape2D_vawb0")

[node name="DamageSignals" parent="." instance=ExtResource("27_qehgg")]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageSignals"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_duydy")

[node name="Revivable" parent="DamageSignals" instance=ExtResource("23_d234k")]
enabled = false
revives_with = 1

[node name="CollisionAvoider" parent="." node_paths=PackedStringArray("target") instance=ExtResource("18_rtxip")]
target = NodePath("..")
collision_shape = SubResource("CircleShape2D_bscnp")

[node name="Flashlight" parent="." instance=ExtResource("15_hljm8")]

[node name="Body" parent="Flashlight/Display" index="2"]
visible = false

[node name="HunterCostume" parent="." instance=ExtResource("19_c0d8f")]
y_sort_enabled = true
texture = SubResource("ViewportTexture_shnpn")

[node name="MaterialParent" parent="HunterCostume/SubViewport" index="0"]
material = SubResource("ShaderMaterial_p6wcf")

[node name="FlashlightBack" type="Sprite2D" parent="HunterCostume/SubViewport/MaterialParent" index="1"]
texture = ExtResource("20_g6qtr")
hframes = 32

[node name="FlashlightFront" type="Sprite2D" parent="HunterCostume/SubViewport/MaterialParent" index="3"]
texture = ExtResource("21_pbkwq")
hframes = 32

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.5
range_item_cull_mask = 33
texture = SubResource("GradientTexture2D_xocc6")
height = 16.0

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../IgnoreCanvasModulate/FollowPlayer")

[node name="IgnoreCanvasModulate" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="FollowPlayer" type="Node2D" parent="IgnoreCanvasModulate"]

[node name="NameLabel" type="Label" parent="IgnoreCanvasModulate/FollowPlayer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.247059)
z_index = 1
offset_left = -84.0
offset_top = 8.0
offset_right = 84.0
offset_bottom = 34.0
text = "peer name"
horizontal_alignment = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="IgnoreCanvasModulate/FollowPlayer/NameLabel"]
replication_config = SubResource("SceneReplicationConfig_isui6")

[node name="NotificationContainer" type="HBoxContainer" parent="IgnoreCanvasModulate/FollowPlayer"]
offset_left = -32.0
offset_top = -42.0
offset_right = 32.0
offset_bottom = -26.0
alignment = 1

[node name="ReviveBar" parent="IgnoreCanvasModulate/FollowPlayer/NotificationContainer" instance=ExtResource("24_qych1")]
visible = false
layout_mode = 2
size_flags_vertical = 8
max_value = 8.0
fill_mode = 3
texture_under = ExtResource("33_a7fw2")
texture_progress = ExtResource("33_a7fw2")
tint_under = Color(1, 1, 1, 0.247059)

[node name="Alert" parent="IgnoreCanvasModulate/FollowPlayer/NotificationContainer" instance=ExtResource("28_bjj70")]
layout_mode = 2

[node name="BatteryAlert" parent="IgnoreCanvasModulate/FollowPlayer/NotificationContainer" instance=ExtResource("31_vp1ot")]
layout_mode = 2

[connection signal="dropped" from="." to="CollisionAvoider" method="move_target"]
[connection signal="changed" from="GhostPeerID" to="GhostPeerID/PeerProcessMode" method="set_secondary_peer_id"]
[connection signal="changed" from="GhostPeerID" to="GhostPeerID/PeerVisibilityFilter" method="set_secondary_peer_id"]
[connection signal="process_mode_updated" from="GhostPeerID/PeerProcessMode" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/Alert" method="set_process_mode"]
[connection signal="filter_ready" from="GhostPeerID/PeerVisibilityFilter" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/Alert/MultiplayerSynchronizer" method="add_visibility_filter"]
[connection signal="changed" from="PeerID" to="GhostPeerID/PeerProcessMode" method="set_primary_peer_id"]
[connection signal="changed" from="PeerID" to="GhostPeerID/PeerVisibilityFilter" method="set_primary_peer_id"]
[connection signal="changed" from="PeerID" to="PeerID/PeerVisibilityFilter" method="set_primary_peer_id"]
[connection signal="changed" from="PeerID" to="PlayerControllerStack/Synced" method="set_input_authority"]
[connection signal="changed" from="PeerID" to="IgnoreCanvasModulate/FollowPlayer/NameLabel" method="set_peer_id"]
[connection signal="changed_to_local" from="PeerID" to="IgnoreCanvasModulate/FollowPlayer/NameLabel" method="hide"]
[connection signal="changed_to_local" from="PeerID" to="HeartbeatRumble" method="set_process" binds= [true]]
[connection signal="changed_to_local" from="PeerID" to="Camera2D" method="set_enabled" binds= [true]]
[connection signal="changed_to_local" from="PeerID" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/BatteryAlert/AllowSetBool" method="set_is_allowed" binds= [true]]
[connection signal="changed_to_remote" from="PeerID" to="IgnoreCanvasModulate/FollowPlayer/NameLabel" method="show"]
[connection signal="changed_to_remote" from="PeerID" to="HeartbeatRumble" method="set_process" binds= [false]]
[connection signal="changed_to_remote" from="PeerID" to="Camera2D" method="set_enabled" binds= [false]]
[connection signal="changed_to_remote" from="PeerID" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/BatteryAlert/AllowSetBool" method="set_is_allowed" binds= [false]]
[connection signal="filter_ready" from="PeerID/PeerVisibilityFilter" to="HeartbeatRumble/MultiplayerSynchronizer" method="add_visibility_filter"]
[connection signal="filter_ready" from="PeerID/PeerVisibilityFilter" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/BatteryAlert/MultiplayerSynchronizer" method="add_visibility_filter"]
[connection signal="state_entered" from="StateChart/Base/Dead" to="." method="enable_dead_collision_layer"]
[connection signal="state_entered" from="StateChart/Base/Dead" to="StateChart/Base/Dead/IsDead" method="set_true"]
[connection signal="state_entered" from="StateChart/Base/Dead" to="DamageSignals/Revivable" method="enable"]
[connection signal="state_entered" from="StateChart/Base/Dead" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/ReviveBar" method="show"]
[connection signal="state_entered" from="StateChart/Base/Dead" to="." method="set_z_index" binds= [-1]]
[connection signal="state_entered" from="StateChart/Base/Dead" to="Flashlight/Behavior" method="set_enabled" binds= [false]]
[connection signal="state_entered" from="StateChart/Base/Dead" to="HunterCostume" method="play" binds= ["dead"]]
[connection signal="state_exited" from="StateChart/Base/Dead" to="StateChart/Base/Dead/IsDead" method="set_false"]
[connection signal="state_exited" from="StateChart/Base/Dead" to="DamageSignals/Revivable" method="disable"]
[connection signal="state_exited" from="StateChart/Base/Dead" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/ReviveBar" method="hide"]
[connection signal="state_exited" from="StateChart/Base/Dead" to="." method="set_z_index" binds= [0]]
[connection signal="state_entered" from="StateChart/Base/Alive" to="PlayerControllerStack/Synced" method="force_emit_move_vector_signals"]
[connection signal="state_entered" from="StateChart/Base/Alive" to="Flashlight/Behavior" method="set_enabled" binds= [true]]
[connection signal="state_exited" from="StateChart/Base/Alive" to="Flashlight/Behavior" method="set_enabled" binds= [false]]
[connection signal="state_entered" from="StateChart/Base/Alive/Movement/Idle" to="HunterCostume" method="play" binds= ["idle"]]
[connection signal="state_entered" from="StateChart/Base/Alive/Movement/Move" to="HunterCostume" method="play" binds= ["move"]]
[connection signal="state_physics_processing" from="StateChart/Base/Alive/Movement/Move" to="StateChart/Base/Alive/Movement/Move/Move" method="manual_physics_process"]
[connection signal="state_entered" from="StateChart/Base/Alive/Movement/Stun" to="StateChart/Base/Alive/Movement/Stun/StunTimeout" method="start"]
[connection signal="state_entered" from="StateChart/Base/Alive/Movement/Stun" to="HunterCostume/Effects" method="play" binds= [&"sprite/shake"]]
[connection signal="state_exited" from="StateChart/Base/Alive/Movement/Stun" to="StateChart/Base/Alive/Movement/Stun/StunTimeout" method="stop"]
[connection signal="state_exited" from="StateChart/Base/Alive/Movement/Stun" to="PlayerControllerStack/Synced" method="force_emit_move_vector_signals"]
[connection signal="state_exited" from="StateChart/Base/Alive/Movement/Stun" to="HunterCostume/Effects" method="play" binds= [&"RESET"]]
[connection signal="timeout" from="StateChart/Base/Alive/Movement/Stun/StunTimeout" to="StateChart" method="send_event" binds= [&"stun_ended"]]
[connection signal="state_entered" from="StateChart/Base/Alive/Vulnerability/Invulnerable" to="." method="enable_invulnerable_collision_layer"]
[connection signal="state_entered" from="StateChart/Base/Alive/Vulnerability/Invulnerable" to="DamageSignals" method="set_monitorable" flags=3 binds= [false]]
[connection signal="state_entered" from="StateChart/Base/Alive/Vulnerability/Invulnerable" to="HunterCostume/Effects" method="play" binds= [&"canvas_item/flash"]]
[connection signal="state_entered" from="StateChart/Base/Alive/Vulnerability/Vulnerable" to="." method="enable_alive_collision_layer"]
[connection signal="state_entered" from="StateChart/Base/Alive/Vulnerability/Vulnerable" to="DamageSignals" method="set_monitorable" flags=3 binds= [true]]
[connection signal="state_entered" from="StateChart/Base/Alive/Vulnerability/Vulnerable" to="HunterCostume/Effects" method="play" binds= [&"RESET"]]
[connection signal="button_1_changed" from="PlayerControllerStack/Synced" to="Flashlight/Behavior" method="set_powered"]
[connection signal="button_1_pressed" from="PlayerControllerStack/Synced" to="StateChart" method="send_event" binds= [&"button_1_pressed"]]
[connection signal="button_1_released" from="PlayerControllerStack/Synced" to="StateChart" method="send_event" binds= [&"button_1_released"]]
[connection signal="button_2_pressed" from="PlayerControllerStack/Synced" to="StateChart" method="send_event" binds= [&"button_2_pressed"]]
[connection signal="button_2_released" from="PlayerControllerStack/Synced" to="StateChart" method="send_event" binds= [&"button_2_released"]]
[connection signal="look_rotation_changed" from="PlayerControllerStack/Synced" to="Flashlight/Behavior" method="set_target_rotation"]
[connection signal="move_started" from="PlayerControllerStack/Synced" to="StateChart" method="send_event" binds= [&"move_started"]]
[connection signal="move_stopped" from="PlayerControllerStack/Synced" to="StateChart" method="send_event" binds= [&"move_stopped"]]
[connection signal="move_vector_changed" from="PlayerControllerStack/Synced" to="StateChart/Base/Alive/Movement/Move/Move" method="set_move_vector"]
[connection signal="sensed_intensity_changed" from="AuraSense" to="HeartbeatRumble" method="set_heart_rate_from_index"]
[connection signal="sensed_intensity_changed" from="AuraSense" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/Alert" method="set_alert_level_from_int"]
[connection signal="damaged_by" from="DamageSignals" to="DamageSignals/Revivable" method="take_damage"]
[connection signal="progress_percentage_changed" from="DamageSignals/Revivable" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/ReviveBar" method="set_as_ratio_floored"]
[connection signal="revived" from="DamageSignals/Revivable" to="StateChart" method="send_event" binds= [&"revived"]]
[connection signal="revived" from="DamageSignals/Revivable" to="Flashlight/Behavior" method="set_battery_percentage" binds= [0.75]]
[connection signal="battery_died" from="Flashlight/Behavior" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/BatteryAlert" method="notify_dead" flags=3]
[connection signal="battery_died" from="Flashlight/Behavior" to="StateChart" method="send_event" binds= [&"flashlight_battery_died"]]
[connection signal="battery_lowed" from="Flashlight/Behavior" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/BatteryAlert" method="notify_low" flags=3]
[connection signal="battery_lowed" from="Flashlight/Behavior" to="StateChart" method="send_event" binds= [&"flashlight_battery_lowed"]]
[connection signal="battery_undied" from="Flashlight/Behavior" to="StateChart" method="send_event" binds= [&"flashlight_battery_undied"]]
[connection signal="battery_unlowed" from="Flashlight/Behavior" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/BatteryAlert" method="notify_none" flags=3]
[connection signal="battery_unlowed" from="Flashlight/Behavior" to="StateChart" method="send_event" binds= [&"flashlight_battery_unlowed"]]
[connection signal="damage_taken" from="Flashlight/Behavior" to="StateChart" method="send_event" binds= [&"stunned"]]
[connection signal="flashlight_rotation_changed" from="Flashlight/Behavior" to="HunterCostume" method="set_costume_rotation"]
[connection signal="powered_off" from="Flashlight/Behavior" to="StateChart" method="send_event" binds= [&"flashlight_unpowered"]]
[connection signal="powered_off" from="Flashlight/Behavior" to="StateChart/Base/Alive/Movement/Move/Move" method="set_move_speed" binds= [74.0]]
[connection signal="powered_on" from="Flashlight/Behavior" to="StateChart" method="send_event" binds= [&"flashlight_powered"]]
[connection signal="powered_on" from="Flashlight/Behavior" to="StateChart/Base/Alive/Movement/Move/Move" method="set_move_speed" binds= [29.6]]
[connection signal="powered_on_attempted" from="Flashlight/Behavior" to="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/BatteryAlert" method="notify_dead" flags=3]
[connection signal="range_value_changed" from="Flashlight/Display/Body/RotationToIntRange" to="HunterCostume/SubViewport/MaterialParent/FlashlightBack" method="set_frame"]
[connection signal="range_value_changed" from="Flashlight/Display/Body/RotationToIntRange" to="HunterCostume/SubViewport/MaterialParent/FlashlightFront" method="set_frame"]
[connection signal="draw" from="HunterCostume/SubViewport/MaterialParent/Arms" to="HunterCostume/SubViewport/MaterialParent/FlashlightBack" method="show"]
[connection signal="draw" from="HunterCostume/SubViewport/MaterialParent/Arms" to="HunterCostume/SubViewport/MaterialParent/FlashlightFront" method="show"]
[connection signal="draw" from="HunterCostume/SubViewport/MaterialParent/Dead" to="HunterCostume/SubViewport/MaterialParent/FlashlightBack" method="hide"]
[connection signal="draw" from="HunterCostume/SubViewport/MaterialParent/Dead" to="HunterCostume/SubViewport/MaterialParent/FlashlightFront" method="hide"]

[editable path="HeartbeatRumble"]
[editable path="PlayerControllerStack"]
[editable path="Flashlight"]
[editable path="Flashlight/Display"]
[editable path="HunterCostume"]
[editable path="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/Alert"]
[editable path="IgnoreCanvasModulate/FollowPlayer/NotificationContainer/BatteryAlert"]
